2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>

	* Sybase.py: Corrected test test_ExceptionsAsConnectionAttributes
	- Added Exceptions as attributes of Connection based on patch by
	Greg Ward

	* Sybase.py: Corrected test test_non_existing_proc - Raising
	StoredProcedureError when calling a non-existing stored procedure

	* Sybase.py: Corrected test test_duplicate_error - Raising
	IntegrityError exception when trying to insert a duplicate value

	* Sybase.py: Corrected tests test_bug_result_pending3_fetchall,
	test_fetchall and test_fetchmany - "This routine cannot be called
	because another command structure has results pending." when
	manually commiting after a fetchall()

	* Sybase.py: Corrected tests test_bug_result_pending and
	test_bug_result_pending2 - "This routine cannot be called because
	another command structure has results pending." when calling
	execute on a cursor after a request has failed

	* cmd.c: Corrected core dump in ct_param when in debug mode

	* blk.c, cmd.c, conn.c, ctx.c, databuf.c, datafmt.c, datetime.c,
	iodesc.c, locale.c, money.c, msgs.c, numeric.c: Applied patch from
	Gregory Bond so that python-sybase works with python 2.5

	* setup.py, tests/sybase_dbapi20.py, tests/test_sybase_dbapi20.py:
	Added python-sybase specific tests to dbapi20 and a test runner
	for python-sybase with and without auto_commit

	* tests/dbapi20.py: Extended dbapi20 driver compliance unit test
	suite in order to permit testing drivers without auto-commit

	* tests/dbapi20.py: Added Python DB API 2.0 Anal Compliance Unit
	Test 1.10

2005-04-07 08:46  djc

	* Sybase.py, setup.py, sybasect.c, dist/release-0.37,
	  doc/sybase.tex: Bump release to 0.37.

2005-03-21 16:18  djc

	* ChangeLog, Sybase.py, setup.py, sybasect.c,
	  dist/release-0.37pre3, doc/sybase.tex: Yet another attempt to get
	  a new release out.

2005-03-21 16:13  djc

	* cmd.c, freetds.h, sybasect.h: Fix compilation and remove warnings
	  for FreeTDS.

2005-03-21 10:17  djc
